# Arrvee

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WORKFLOW.md  analysis_results.json  analysis_results_full.json  sample_prescan.arv
shaders/: parametric_waves.wgsl  parametric_waves_effect.wgsl  psychedelic_effects.wgsl  simple.wgsl  visualizer.wgsl
shaders/compute/: beat_detection.wgsl  features.wgsl  fft.wgsl
src/: audio_analyzer.rs  audio_test.rs  basic_main.rs  gpu_audio_test.rs  graphics_test_main.rs  main.rs  minimal_test.rs  prescan_tool.rs  simple_main.rs  synchronized_test.rs
src/audio/: analysis_interface.rs  arv_format.rs  beat_detector.rs  cpu_analyzer.rs  feature_normalizer.rs  fft.rs  gpu_analyzer.rs  gpu_analyzer_wrapper.rs  mod.rs  playback.rs  prescan.rs  processor.rs
src/effects/: mod.rs  preset.rs  psychedelic_manager.rs
src/graphics/: engine.rs  mod.rs  shader.rs  texture.rs  vertex.rs
src/ui/: mod.rs
