[package]
name = "arrvee-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics and windowing
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.27"

# Audio processing
cpal = { version = "0.15", features = ["asio"] }
rodio = "0.18"
rustfft = "6.0"
hound = "3.4"

# Async and threading
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"

# UI
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"


[[bin]]
name = "graphics-test"
path = "src/graphics_test_main.rs"

[[bin]]
name = "audio-test"
path = "src/audio_test.rs"
